kubernetes/argo-cd/projects/aws/production-hm/confluent-schema-registry/environments/production/kubernetes-manifests/hm-confluent-schema-registry-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hm-confluent-schema-registry-ingress
  namespace: production-hm-confluent-schema-registry
  annotations:
    kubernetes.io/ingress.class: traefik
    # https://doc.traefik.io/traefik/reference/routing-configuration/kubernetes/ingress/#on-ingress
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    # https://kubernetes-sigs.github.io/external-dns/latest/docs/annotations/annotations
    external-dns.alpha.kubernetes.io/hostname: confluent-schema-registry.hongbomiao.com
  labels:
    app.kubernetes.io/name: confluent-schema-registry
    app.kubernetes.io/part-of: production-hm-confluent-schema-registry
spec:
  rules:
    - host: confluent-schema-registry.hongbomiao.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hm-confluent-schema-registry-service
                port:
                  number: 8081
  tls:
    - hosts:
        - confluent-schema-registry.hongbomiao.com
      secretName: hm-confluent-schema-registry-certificate
